Added terminal page and new api call
